all frames excetpt p, h1-h3, are set to the correct size. Align needs more margin.

--- a/style.css
+++ b/style.css
@@ -17,14 +17,14 @@ div {
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
-    /* background: #777; */
-    background: hotpink;
+    background: #777;
+    /* background: hotpink; */
     width: 960px;
+    margin-left: 250px;
     font-size: 18px;
     text-align: center;
-    margin-left: 250px;
     /* margin-right: 25px; */
-   
+
    /* line-height: 5px;   */
      /* grey space between cells */
     
@@ -32,20 +32,18 @@ body {
 }
 
 header {
-    padding: 20px;
-    margin-bottom: 0px;
-    margin-top: 15px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     background: #ebebeb;
 /* height: 80px; */
 /* line-height: 36px; */
-
-
-
 }
 
 nav {
-    padding: 20px;
-    margin-bottom: 20px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-top: 10px;
+    margin-bottom: 0px;
     background: #ebebeb; 
     /* line-height: 36px;  */
    
@@ -66,11 +64,13 @@ nav {
 aside {
   float: right;
   width: 440px;
-  height: 250px;
+  height: 265px;
+  padding-top: 35px;
   margin-bottom: 15px;
   margin-top: 15px;
-  background:greenyellow;
-  /* background: #ebebeb; */
+  /* margin-left: 0px; */
+  /* background:greenyellow; */
+  background: #ebebeb;
   /* line-height: 5px; */
 
 }
@@ -81,6 +81,10 @@ section {
     height: 250px;
     margin-bottom: 15px;
     margin-top: 15px;
+    padding-top: 35px;
+    padding-bottom: 15px;
+    padding-right: 10px;
+    padding-left: 10px;
     background: #ebebeb;
     /* background: blueviolet; */
     /* height: 200px; */
@@ -90,41 +94,50 @@ section {
 }
 
 article {
-    overflow: auto;
-    align-content: center;
-    margin-top: 35px;
-    /* margin-left: 5px; */
-    /* padding-top: 5px; */
-    /* padding-bottom: 0px; */
-    /* padding-left: 25px; */
-    /* padding-right: 25px; */
+    /* overflow: auto; */
+    /* align-content: center; */
+    margin-top: 15px;
+    /* margin-bottom: 25px; */
+    margin-left: 5px;
+    margin-right: 5px;
+    padding-top: 15px;
     color: #ebebeb;
     background: #777;
+    /* padding-top: 5px; */
+    padding-bottom: 10px;
+    /* padding-left: 25px; */
+    /* padding-right: 25px; */
     /* background: orangered; */
      /* clear: both; */
 }
 
 h1, h2, h3 {
-    margin-left: 25px;
-    margin-right: 25px;
-    
+    /* margin-left: 45px; */
+    margin-right: 10px;
     color: #777;
     background: #ebebeb;
-    float: left;
-    /* clear: right; */
+    
+    /* align-content: center; */
+    /* padding-top: 10px; */
 }
 
 p {
+    overflow: auto;
+    float: left;
+    margin-top: 5px;
+    margin-bottom: 5px;
     margin-left: 25px;
     margin-right: 25px;
+    /* padding-top: 10px; */
+    padding-bottom: 5px;
     color: #777;
     background: #ebebeb;
 }
 /* added padding and cleard footer */
 footer {
     background: #ebebeb;
-    padding: 20px;
-    margin-bottom: 20px;
+    padding: 30px;
+    margin-bottom: 30px;
     clear: both;
     /* background: royalblue; */
     /* height: 80px; */
